--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
 html{
     font-size: 62.5%;
 }
+body{
+    font-family: 'Poppins', sans-serif;
+}
 h1{
     font-size: 2.6rem;
 }
@@ -24,18 +27,41 @@ h2{
 }
 h3{
     font-size: 3rem;
+    font-weight: 400;
 }
 h4,h5{
     font-size: 2.8rem;
 }
 a{
-    color: antiquewhite;
+    color: rgb(255, 255, 255);
     text-decoration: none;
+}
+button{
+    padding: 2rem 4.5rem;
+    background: #2F1D3B;
+    opacity: 90%;
+    border: none;
+    color: white;
+    font-size: 1.8rem;
+    cursor: pointer;
+    border-radius: 5%;
+    font-size: 2rem;
+}
+/* .btn-hero{
+    transition: all 0.5s ease;
+    animation: buttonAnimation 2s infinite alternate 2s;
+} */
+button:hover{
+    background: rgba(8, 77, 161, 0.8);
+    font-size: 2rem;
 }
 /* Nav and Hero section*/
 .main-head{
-    background-color: #131c27;
-    color: antiquewhite;
+    background-color: #2F1D3B;
+    color: white;
+    top: 0px;
+    position: sticky;
+    z-index: 3;
 }
 nav{
     display: flex;
@@ -44,6 +70,8 @@ nav{
     padding: 2rem;
     min-height: 10vh;
     align-items: center;
+    flex-wrap: wrap;
+    
 }
 nav ul{
     display: flex;
@@ -53,12 +81,15 @@ nav ul{
     list-style: none;
 }
 #logo{
-    flex: 2 1 40rem;
+    flex: 4 2 40rem;
+    font-family: 'Bangers', cursive;
+    font-size: 4rem;
+    font-weight: 400;
 
 }
 .hero{
     min-height: 90vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5),transparent),url('/img/landing-page.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.5),transparent),url('/img/purpletree.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -69,5 +100,219 @@ nav ul{
     justify-content: center;
     text-align: center;
 
+
+}
+.hero h3{
+    padding: 5rem;
+}
+
+/*locations sections*/
+#locations{
+    min-height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.5),transparent),
+    url(/img/pexels-roberto-nickson-2559941.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+    color: white;
+
+}
+.locations-head{
+    width: 90%;
+    margin: auto;
+}
+.locations-head h2{
+    padding: 1rem 0rem;
+}
+.locations-head h3{
+    padding: 4rem 0rem;
+}
+.cloud{
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    pointer-events: none;
+
+}
+.moving-cloud-1{
+    animation: cloudAnimation  3s infinite alternate ease-in-out;
+
+}
+.moving-cloud-2{
+    top: 20%;
+    z-index: -1;
+    opacity: 0.8;
+    animation: cloudAnimation  5s infinite alternate ease-in-out;
+}
+
+
+
+@keyframes cloudAnimation {
+    from{
+        transform: translate(10%, -10%)
+    }
+    to{
+        transform: translate(0%, 0%);
+    }
+    
+}
+
+
+/* BENEFITS*/
+.benefits-head{
+    background: rgba(8, 77, 161, 0.8);
+    padding: 3rem;
+    min-height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+
+}
+.benefits-head h3{
+    padding: 1rem;
+}
+.cards{
+    width: 90%;
+    margin: auto;
+    display: flex;
+    min-height: 70vh;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.card{
+    flex: 1 1 25rem;
+    min-height: 40vh;
+    margin: 2rem 5rem;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1), 0px 20px 20px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    border-radius: 15px;
+}
+.cards img{
+    max-width: 15%;
+    margin: 2rem;
+    
+}
+.card h4, .card p {
+    padding: 1rem;
+    
+}
+.card-icon{
+    background: rgba(8, 77, 161, 0.8);
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+#contact{
+    min-height: 100vh;
+    background:  
+    url(/img/contact-mountain.png);
+    
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-wrapper{
+    background: rgba(19, 28, 39, 0.8);
+    width: 60%;
+    border-radius: 15px;
+    color: white;
+}
+
+.form-head{
+    text-align: center;
+    padding: 4rem;
+}
+.name-form, .email-form{
+    padding: 3rem;
+    text-align: center;
+}
+.form-wrapper label{
+    margin: 0rem 3rem;
+}
+.form-wrapper button{
+    width: 100%;
+    padding: 2rem;
+    margin-top: 8rem;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+.form-wrapper input{
+    padding: 1rem 3rem;
+}
+footer{
+    color: white;
+    background: #2F1D3B;
+
+}
+.footer-wrapper{
+    display: flex;
+    padding: 2rem;
+    width: 90%;
+    margin: auto;
+    align-items: center;
+    min-height: 10vh;
+    flex-wrap: wrap;
+}
+footer h5{
+    flex: 1 1 40rem;
+}
+footer ul{
+    display: flex;
+    list-style: none;
+    flex: 1 1 40rem ;
+    justify-content: space-between;
+    
+}
+footer ul li a {
+    text-decoration: underline;
+}
+/*media query*/
+@media  screen and (max-width: 932px) {
+    html{
+        font-size: 45%;
+    }
+    nav{
+        text-align: center;
+    }
+    #logo{
+        padding: 2rem;
+    }
+    .cloud{
+        height: 40rem;
+        position: absolute;
+        top: 0%;
+        right: 0%;
+        pointer-events: none;
+    
+    }
+    .moving-cloud-1{
+        z-index: -1;
+
+    }
+    .moving-cloud-2{
+        z-index: -2;
+    }
+    .locations-head h3{
+        background: rgba(19, 28, 39, 0.8);
+        -webkit-text-fill-color: white;
+    }
+    .form-wrapper{
+        width: 100%;
+    }
+    footer{
+        text-align: center;
+    }
+    footer h5{
+        padding-bottom: 3rem;
+    }
 
 }
