--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ nav ul{
 }
 .Home{
     min-height: 90vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.8),transparent),url('/img/pexels-oliver-sjöström-1020016.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.8),transparent),url(/img/pexels-oliver-sjöström-1020016.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -276,7 +276,7 @@ footer ul{
 footer ul li a {
     text-decoration: underline;
 } 
-/*media query
+/* media query */
 @media  screen and (max-width: 932px) {
     html{
         font-size: 45%;
